--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm index.js",
-    "dev": "nodemon index.js"
+    "start": "npm app/index.js",
+    "dev": "nodemon app/index.js"
   },
   "author": "Alexandr Gladky",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
